--- a/ProjektHCMSeite/hauptSeite/style.css
+++ b/ProjektHCMSeite/hauptSeite/style.css
@@ -9,13 +9,13 @@
 }
 .placehcmLogo{
     grid-row: 1/3;
-    background-color:antiquewhite;
+    background-color:rgb(15, 14, 64);
     border: 2px;
 }
 .titlehcm{
     grid-row: 1/2;
     grid-column: 2 / 4;
-    background-color:aqua;
+    background-color:rgb(15, 14, 64);
     border: 2px;
     display: flex;
     text-align: center;
@@ -23,6 +23,7 @@
 }
 .titelHCM{
     flex-grow: 2;
+    color:aliceblue;
 }
 .TVButton{
     margin-top: 20%;
@@ -32,22 +33,22 @@
 .mainNav{
     
     grid-column: 2 / 4;
-    background-color:aquamarine;
+    background-color:rgb(15, 14, 64);
     border: 2px;
 }
 .mainMain{
     grid-row: 3/4;
     grid-column: 1 / 4;
-    background-color:bisque;
+    background-color:rgb(15, 14, 64);
     border: 2px;
 }
 aside{ 
-    background-color:chocolate;
+    background-color:rgb(65, 125, 247);
 }
 article{
     
     grid-column: 1/3;
-    background-color:blue;
+    background-color:rgb(65, 125, 247);
     border: 2px;
 }
 main{
@@ -65,8 +66,8 @@ h1{
     
     z-index: 2;
     position: absolute;
-    top: 20;
-    left: 20;
+    top: 30;
+    left: 30;
 }
 .mySlides,.image1,.image2,.image3,.image4{
     margin:5px auto;
@@ -79,7 +80,8 @@ h1{
     gap: 5px;
 }
 .New{
-    background-color:aquamarine;
+    color:aliceblue;
+    background-color:rgb(15, 14, 64);
     padding: 10px;
     border-radius:8px;
 }
@@ -114,7 +116,8 @@ table{
     width: 100%;
 }
 .aktuellespiele, .letzteResultate, .nachsteSpiele{
-    background-color:aquamarine;
+    color:aliceblue;
+    background-color:rgb(15, 14, 64);
     padding: 10px;
     border-radius:8px;
     margin-bottom: 15px;
@@ -127,7 +130,7 @@ a{
     
 }
 .containerFooter{
-    background-color:brown;
+    background-color:rgb(8, 11, 48);
     border: 2px;
     padding: 20px;
     display: grid;
@@ -219,3 +222,15 @@ body{
     grid-template-columns: 200px auto ;
     grid-template-rows: 120px 50px ;
 }
+.containerFooter{
+    color:aliceblue;
+}
+.videoButton{
+    color: aliceblue;
+    background-color:rgb(8, 11, 48);
+    width: 100%;
+    height: 100%;
+    display: block;
+    font-size: 15px;
+  }
+  
